fixed z-index issues

--- a/styles/layout/layout.scss
+++ b/styles/layout/layout.scss
@@ -1,3 +1,5 @@
 .layout {
   background-color: white;
+  z-index: 5000;
+  overflow: hidden;
 }
