--- a/styles/layout/nav.scss
+++ b/styles/layout/nav.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 5.2rem 4rem 0rem 4rem;
+  z-index: 5000;
   @media screen and (min-width: 860px) {
     padding: 5.2rem 5.822rem 0rem 5.822rem;
   }
